@@ -45,12 +45,14 @@ GolangFmtOption::GolangFmtOption(LiteApi::IApplication *app,QObject *parent) :
 
     bool diff = m_liteApp->settings()->value("golangfmt/diff",true).toBool();
     bool autofmt = m_liteApp->settings()->value("golangfmt/autofmt",true).toBool();
+    bool autopop = m_liteApp->settings()->value("golangfmt/autopop",false).toBool();
     int timeout = m_liteApp->settings()->value("golangfmt/timeout",600).toInt();
     if (!diff) {
         autofmt = false;
     }
     ui->checkBoxDiff->setChecked(diff);
     ui->checkBoxAutoFmt->setChecked(autofmt);
+    ui->checkBoxAutoPopMessage->setChecked(autopop);
     ui->timeoutLineEdit->setText(QString("%1").arg(timeout));
 
     connect(ui->checkBoxDiff,SIGNAL(toggled(bool)),ui->checkBoxAutoFmt,SLOT(setEnabled(bool)));
@@ -82,11 +84,13 @@ void GolangFmtOption::apply()
 {
     bool diff = ui->checkBoxDiff->isChecked();
     bool autofmt = ui->checkBoxAutoFmt->isChecked();
+    bool autopop = ui->checkBoxAutoPopMessage->isChecked();
     if (!diff) {
         autofmt = false;
     }
     m_liteApp->settings()->setValue("golangfmt/diff",diff);
     m_liteApp->settings()->setValue("golangfmt/autofmt",autofmt);
+    m_liteApp->settings()->setValue("golangfmt/autopop",autopop);
     int timeout = ui->timeoutLineEdit->text().toInt();
     if (timeout < 50) {
         timeout = 600;
